--- a/nappulapeli-frontend/src/css/Main.css
+++ b/nappulapeli-frontend/src/css/Main.css
@@ -7,7 +7,22 @@ margin: auto;
 color: white;
 }
 
+.button-container{
+  position: relative;
+  text-align: center;
+}
+.centered-text{
+  position: absolute;
+  top:40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 350%;
+  pointer-events: none;
+}
 
+.game-button{
+  max-width: 100%;
+}
 
 .list {
   list-style-type: none;
@@ -60,6 +75,10 @@ cursor:pointer;
   [class*="row"] {
   max-width: 100%;
   }
+  [class*="centered-text"] {
+    font-size: 7vw;
+    min-width: 80%;
+    }
  h2{
   margin-top: 10px;
  }
@@ -90,39 +109,4 @@ button:hover {
   padding-right: 30px;
   padding-left: 30px;
   padding-bottom: 12px;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
