--- a/nappulapeli-frontend/src/css/Main.css
+++ b/nappulapeli-frontend/src/css/Main.css
@@ -61,6 +61,55 @@ cursor:pointer;
   margin: auto;
 }
 
+.fade-in {
+  animation: fadeIn ease 0.75s;
+  -webkit-animation: fadeIn ease 0.75s;
+  -moz-animation: fadeIn ease 0.75s;
+  -o-animation: fadeIn ease 0.75s;
+  -ms-animation: fadeIn ease 0.75s;
+}
+
+
+@keyframes fadeIn{
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+@-moz-keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+@-o-keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+@-ms-keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
 .col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
   position: relative;
   width: 100%;
@@ -73,7 +122,9 @@ cursor:pointer;
   flex-grow: 1;
   max-width: 100%
 }
-
+.info-margin{
+  margin-top: 10px;
+}
 @media only screen and (max-width: 768px) {
   /* For mobile phones: */
   [class*="col"] {
@@ -92,6 +143,9 @@ cursor:pointer;
   [class*="centered-text"] {
     font-size: 5vw;
     min-width: 80%;
+  }
+  [class*="info-margin"] {
+    margin-top: 5px;
   }
   [class*="unselected-clor"] {
     box-shadow: 1px 5px rgb(8, 8, 8);
@@ -120,7 +174,6 @@ button:hover {
   background-color: rgb(0, 87, 87); /* Green */
   color: white;
 }
-
 .nameInputButton{
   padding-top: 9px;
   padding-right: 30px;
