--- a/nappulapeli-frontend/src/css/SideBars.css
+++ b/nappulapeli-frontend/src/css/SideBars.css
@@ -1,12 +1,18 @@
 .Header {
     padding: 1vh 0px;
-    margin-bottom: 13vh;
 }
+
+.logo{
+    max-width: 50%;
+  }
 
 @media only screen and (max-width: 768px) {
     /* For mobile phones: */
     [class*="Header"] {
         margin-bottom: 2vh;
+    }
+    [class*="logo"] {
+        max-width: 95%;
     }
   }
 
