some fixes and typo correts
Added max character lenght to name input, edited some css on how to play screen.

--- a/nappulapeli-frontend/src/css/Main.css
+++ b/nappulapeli-frontend/src/css/Main.css
@@ -25,6 +25,11 @@ min-height: 400px;
   font-size: 250%;
 }
 
+.game-screen-div{
+  max-width: 60%;
+  margin: auto;
+}
+
 .centered-text{
   position: absolute;
   top:40%;
@@ -160,6 +165,9 @@ cursor:pointer;
   }
   [class*="info-margin"] {
     margin-top: 5px;
+  }
+  [class*="game-screen-div"] {
+    max-width: 100%;
   }
   [class*="unselected-clor"] {
     box-shadow: 1px 5px rgb(8, 8, 8);
